--- a/package.json
+++ b/package.json
@@ -20,9 +20,15 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
-    "browser-sync": "^2.23.6",
+    "browser-sync": "^2.24.5",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^4.1.0",
     "gulp-postcss": "^7.0.1",
+    "gulp-rev": "^8.1.1",
+    "gulp-uglify": "^3.0.0",
+    "gulp-usemin": "^0.3.29",
     "gulp-watch": "^5.0.0",
     "isotope-layout": "^3.0.6",
     "mixitup": "^3.3.0",
