--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "filterizr": "^1.3.5",
     "jquery": "^3.3.1",
     "normalize.css": "^8.0.0",
     "waypoints": "^4.0.1"
@@ -17,9 +16,8 @@
   "devDependencies": {
     "autoprefixer": "^8.2.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.24.5",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
@@ -37,8 +35,7 @@
     "postcss-mixins": "^6.2.0",
     "postcss-nested": "^3.0.0",
     "postcss-simple-vars": "^4.1.0",
-    "shufflejs": "^5.1.2",
-    "webpack": "^4.14.0",
-    "webpack-cli": "^2.1.2"
+    "postcss-validator": "^0.2.0",
+    "webpack": "^4.15.1"
   }
 }
